go-todo/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: go-todo
  name: go-todo-frontend-${DEPLOY_SUFFIX}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-todo-frontend-${DEPLOY_SUFFIX}
  template:
    metadata:
      labels:
        app: go-todo-frontend-${DEPLOY_SUFFIX}
    spec:
      containers:
        - name: go-todo-frontend-${DEPLOY_SUFFIX}
          image: "${DOCKER_IMAGE_TAG}"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-registry
