go-todo/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: go-todo
  name: go-todo-ingress-${DEPLOY_SUFFIX}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ${DEPLOY_HOST}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-todo-frontend-${DEPLOY_SUFFIX}
                port:
                  number: 80
